--- a/SME.DynamicBoard.UI/Components/ChartRenderView.razor
+++ b/SME.DynamicBoard.UI/Components/ChartRenderView.razor
@@ -69,12 +69,12 @@ else
                 errorMessage = "chart id required";
 
             }
-            else if (ChartData.ChartParams is null)
+            else if (ChartData is not null && ChartData.ChartParams is null)
             {
 
                 errorMessage = "parameters for chart required";
             }
-            else if (ChartData.ChartParams.Count == 0)
+            else if (ChartData is not null &&  ChartData.ChartParams.Count == 0)
             {
                 errorMessage = "parameters for chart required";
             }
@@ -88,7 +88,7 @@ else
             }
             else
             {
-                if (ChartData.ChartParams is not null)
+                if (ChartData is not null &&  ChartData.ChartParams is not null)
                 {
                     if (ChartData.ChartParams.Count > 0)
                     {
@@ -101,24 +101,24 @@ else
                             parameters += "[" + item.Name + ":" + values + "]";
                             values = "";
                         }
+                        // queryStringParameters = "";
+                        // queryStringParameters =  "&parameters=[" + parameters + "]";
 
 
-
-                        queryStringParameters = "";
-                        queryStringParameters = "chartID=" + ChartId + "&parameters=[" + parameters + "]&token=" + "UserToken" + "&IsAllowRefresh=" + IsAllowRefresh + "&IsAllowPrint=" + IsAllowPrint + "&Language=" + Language;
-                        EncryptionHelper.encryptionKey = Storage.EncryptionKey;
-                        var encryptedData = EncryptionHelper.Encrypt(queryStringParameters);
-                        url = Storage.RootAddress + "/Chart/GetChartEncrypted?Data=" + encryptedData;
-
-                        ChartHTML = await httpClient.GetStringAsync(url);
-                        isError = false;
-                        StateHasChanged();
                     }
 
                 }
             }
+            queryStringParameters = "chartID=" + ChartId + "&parameters=[" + parameters + "]&token=" + "UserToken" + "&IsAllowRefresh=" + IsAllowRefresh + "&IsAllowPrint=" + IsAllowPrint + "&Language=" + Language;
 
+            EncryptionHelper.encryptionKey = Storage.EncryptionKey;
+            var encryptedData = EncryptionHelper.Encrypt(queryStringParameters);
 
+            url = Storage.RootAddress + "/Chart/GetChartEncrypted?Data=" + encryptedData;
+
+            ChartHTML = await httpClient.GetStringAsync(url);
+            isError = false;
+            StateHasChanged();
         }
         catch (Exception ex)
         {
