--- a/DynamicBoard.Application/Components/Pages/Chart/ChartRenderParameters.razor
+++ b/DynamicBoard.Application/Components/Pages/Chart/ChartRenderParameters.razor
@@ -108,6 +108,7 @@
     IQueryable<ChartParameter> ChartParameterIQList;
     protected override async Task OnInitializedAsync()
     {
+        defaultValues = true;
         await GetData();
         await base.OnInitializedAsync();
 
