--- a/DynamicBoard.Application/Views/Chart/ChartView.cshtml
+++ b/DynamicBoard.Application/Views/Chart/ChartView.cshtml
@@ -35,10 +35,10 @@
         else
         {
             <div style="display: flex;justify-content:center;">
-                <h3>@Model.jsonchartTitle.Replace("\"", "")</h3>
+                <h3 style="color:#1C459D">@Model.jsonchartTitle.Replace("\"", "")</h3>
             </div>
             <div style="display: flex;justify-content:center;">
-                <h1 style="margin: auto;font-size: 50px;font-style: inherit;text-align: center;" id="Label_@Model.ChartID"></h1>
+                <h3 style="margin: auto;font-size: 35px;font-style: inherit;text-align: center;color:#C1A968" id="Label_@Model.ChartID"></h3>
             </div>
         }
 
